--- a/_includes/partials/ciphers/hash.liquid
+++ b/_includes/partials/ciphers/hash.liquid
@@ -21,7 +21,7 @@
                 <div class="card">
                     <span class="card-label visually-hidden">Hash text</span>
                     <div class="card-body text-center">
-                        <textarea placeholder="Example: HELLO WORLD → 361fadf1c712e812d198c4cab5712a79" title="Generate hash values for a string" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-text" autocomplete="off"></textarea>
+                        <textarea placeholder="Example: Hello World → b10a8db164e0754105b7a99be72e3fe5" title="Generate hash values for a string" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-text" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
                         <div class="d-flex justify-content-start align-items-center">
