--- a/_includes/partials/ciphers/substitution.liquid
+++ b/_includes/partials/ciphers/substitution.liquid
@@ -18,40 +18,40 @@
             <p class="px-2">
                 A quick example substitution: 
                 <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
-                    SENTENCE
+                    WORLD
                 </code> → 
                 <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
-                    TEST
+                    HELLO
                 </code>
                 → 
                 <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
-                    QBLRBLSB
+                    WNRJO
                 </code> 
                 - The full alphabet would look like 
                 <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
-                    TESABCDFGHIJKLMNOPQRUVWXYZ
-                </code> &ndash; notice that T, E and S have moved to the start, the second T in TEST isn't present again as it has already been used and placed. 
+                    HELOABCDFGIJKMNPQRSTUVWXYZ
+                </code> &ndash; notice that H, E, L and O have moved to the start, the second L in HELLO isn't present again as it has already been used and placed. 
                 Mixed case strings and keys are supported here, for example:
                 <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
-                    SENTence
+                    WOrld
                 </code> →
                 <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
-                    TEST
+                    HELLO
                 </code>
                 →
                 <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
-                    QBLRblsb
+                    WNrjo
                 </code>
                 or 
                 <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
-                    SENTence
+                    WOrld
                 </code> →
                 <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
-                    TEst
+                    HEllo
                 </code>
                 →
                 <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
-                    PAKQaksa
+                    UMpjo
                 </code> &ndash; There is more information available on the <a href="https://en.wikipedia.org/wiki/Substitution_cipher" class="text-convrtr">Substitution cipher</a> Wikipedia page. 
             </p>
         </div>
@@ -60,7 +60,7 @@
                 <div class="card">
                     <span class="card-label visually-hidden">{{ filename | upperFirst }} cipher</span>
                     <div class="card-body text-center">
-                        <textarea placeholder="Example: SENTENCE → TEST [key] → QBLRBLSB" title="{{ filename | upperFirst }} string" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-cipher" autocomplete="off"></textarea>
+                        <textarea placeholder="Example: Hello → World [key] → Cdggj" title="{{ filename | upperFirst }} string" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-cipher" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
                         <div class="text-center mb-4 g-0">
