--- a/_includes/partials/hex/hexfrequencies.liquid
+++ b/_includes/partials/hex/hexfrequencies.liquid
@@ -25,7 +25,7 @@
                     <span class="card-label visually-hidden">Hex frequencies</span>
                     <div class="card-body text-center">
                         <label for="{{ filename }}Text" class="visually-hidden">Hex characters to check</label>
-                        <textarea placeholder="Example: " rows="6" id="{{ filename }}Text" class="form-control word-freqs" autocomplete="off"></textarea>
+                        <textarea placeholder="Enter some hex characters and click the 'Generate' button below" rows="6" id="{{ filename }}Text" class="form-control word-freqs" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
                         <div class="text-center mb-4 g-0">
