--- a/_includes/partials/hex/reversehex.liquid
+++ b/_includes/partials/hex/reversehex.liquid
@@ -34,7 +34,7 @@
                 <div class="card">
                     <span class="card-label visually-hidden">Reverse hex</span>
                     <div class="card-body text-center">
-                        <textarea placeholder="Example: 47 56 37 47" title="Reverse hex nibbles" rows="6" id="{{ filename }}Text" class="form-control reverse-hex" autocomplete="off"></textarea>
+                        <textarea placeholder="Example: 48 65 6c 6c 6f" title="Reverse hex nibbles" rows="6" id="{{ filename }}Text" class="form-control reverse-hex" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
                         <div class="text-center mb-4 g-0">
