--- a/_includes/partials/home/flip.liquid
+++ b/_includes/partials/home/flip.liquid
@@ -13,7 +13,7 @@
             </a>
             <hr>
             <p class="px-2">
-                Flip text upside down - allows you to turn this into ʇɥıs
+                Flip text upside down - allows you to turn <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">this</code> into <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">ʇɥıs</code>
             </p>
         </div>
         <div id="{{ filename }}Collapse" class="collapse">
@@ -22,7 +22,7 @@
                     <span class="card-label visually-hidden">Flip Text</span>
                     <div class="card-body text-center">
                         <label for="{{ filename }}Text" class="visually-hidden">Flip text upside down</label>
-                        <textarea placeholder="Example: TEST → ┴SƎ┴" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-text" autocomplete="off"></textarea>
+                        <textarea placeholder="Example: Hello → Hǝןןo" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-text" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
                         <div class="d-flex justify-content-start align-items-center">
