--- a/_includes/partials/home/frequencies.liquid
+++ b/_includes/partials/home/frequencies.liquid
@@ -22,7 +22,7 @@
                     <span class="card-label visually-hidden">Character frequencies</span>
                     <div class="card-body text-center">
                         <label for="{{ filename }}Text" class="visually-hidden">Characters to check</label>
-                        <textarea placeholder="Example: " rows="6" id="{{ filename }}Text" class="form-control word-freqs" autocomplete="off"></textarea>
+                        <textarea placeholder="Enter some text and click the 'Generate' button below" rows="6" id="{{ filename }}Text" class="form-control word-freqs" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
                         <div class="d-flex justify-content-start align-items-center">
