--- a/_includes/partials/home/replace.liquid
+++ b/_includes/partials/home/replace.liquid
@@ -13,8 +13,8 @@
             </a>
             <hr>
             <p class="px-2">
-                Replace characters in a string - allows replacing any characters or phrases in a string with any character or phrase. 
-                Supports regex so you can run your own custom advanced replacements
+                Replace characters in a string &ndash; allows replacing any characters or phrases in a string with any character or phrase. 
+                Supports <a href="https://en.wikipedia.org/wiki/Regular_expression" class="text-convrtr" title="Regular expression wikipedia page">regex</a> so you can run your own custom advanced replacements.
             </p>
         </div>
         <div id="{{ filename }}Collapse" class="collapse">
@@ -23,7 +23,7 @@
                     <span class="card-label visually-hidden">Replace characters</span>
                     <div class="card-body text-center">
                         <label for="{{ filename }}Text" class="visually-hidden">Replace characters in a string</label>
-                        <textarea placeholder="Example: TESTING → ST → EA → TEASING" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-text" autocomplete="off"></textarea>
+                        <textarea placeholder="Example: Hello → lo → ium → Helium" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-text" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
                         <div class="text-center mb-2 g-0">
