--- a/_includes/partials/misc/colorgenerator.liquid
+++ b/_includes/partials/misc/colorgenerator.liquid
@@ -22,7 +22,7 @@
                     <span class="card-label visually-hidden">Color generator</span>
                     <div class="card-body text-center">
                         <label for="{{ filename }}Text" class="visually-hidden">Data to convert</label>
-                        <textarea placeholder="Example: " rows="6" id="{{ filename }}Text" class="form-control word-freqs" autocomplete="off"></textarea>
+                        <textarea placeholder="Enter some text and click the 'Generate' button below" rows="6" id="{{ filename }}Text" class="form-control word-freqs" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
                         <div class="text-center mb-2 g-0">
