Accessibility change - remove italicised font, replace with prefixed dash

--- a/_includes/partials/misc/elementstable.liquid
+++ b/_includes/partials/misc/elementstable.liquid
@@ -19,7 +19,7 @@
                  There is more information available on the <a href="https://en.wikipedia.org/wiki/Periodic_table" class="text-convrtr">Periodic table</a> wikipedia page. 
             </p>
             <blockquote>
-                <p class="ms-2 fst-italic">Data sourced from <a href="https://github.com/Bowserinator/Periodic-Table-JSON"
+                <p class="ms-2">&mdash; Data sourced from <a href="https://github.com/Bowserinator/Periodic-Table-JSON"
                         class="text-convrtr">Bowserinator / Periodic-Table-JSON</a> under the <a
                         href="https://creativecommons.org/licenses/by-sa/3.0/" class="text-convrtr">Creative Commons
                         Attribution-ShareAlike 3.0
