--- a/_includes/partials/misc/elements.liquid
+++ b/_includes/partials/misc/elements.liquid
@@ -18,7 +18,7 @@
                 space, comma, colon, semi-colon, and hyphen. You can mix and match delimiters, but they are required.
             </p>
             <blockquote>
-                <p class="ms-2 fst-italic">Data sourced from <a href="https://github.com/Bowserinator/Periodic-Table-JSON" class="text-convrtr">Bowserinator / Periodic-Table-JSON</a> under the <a
+                <p class="ms-2">&mdash; Data sourced from <a href="https://github.com/Bowserinator/Periodic-Table-JSON" class="text-convrtr">Bowserinator / Periodic-Table-JSON</a> under the <a
                         href="https://creativecommons.org/licenses/by-sa/3.0/" class="text-convrtr">Creative Commons Attribution-ShareAlike 3.0
                         License</a>.</p>
             </blockquote>
