--- a/_includes/layout/css.liquid
+++ b/_includes/layout/css.liquid
@@ -1,4 +1,4 @@
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css" rel="stylesheet" type="text/css" />
         <!-- Core theme and Bootstrap CSS -->
-        <link href="../assets/css/main.css" rel="stylesheet">
+        <link href="{{ '/assets/css/main.css' | url }}" rel="stylesheet">
