--- a/_includes/partials/default.liquid
+++ b/_includes/partials/default.liquid
@@ -1,12 +1,22 @@
 <section class="section">
     <div class="py-5 pb-4 px-2 px-sm-4">
         <div class="section-heading">
-            <h1 class="display-6">{{ title }}</h1>
+            <h1 class="display-6">{%- if page-id != "sitemap" and page-id != "changelog" and page.inputPath contains "changelog" -%}v{% endif %}{{ title }}</h1>
             <hr>
             <p class="px-2">
                 {{ description }}
             </p>
-            {% if page-id != "sitemap" %}
+            {%- if tags -%}
+            <div class="px-2">
+                {%- for tag in tags -%}
+                {% if tag != "changelog" %}
+                <span class="badge git-badge badge-{{ tag | replace: ' ', '-'}}">{{ tag }}</span>
+                {% endif %}
+                {%- endfor -%}
+            </div>
+            {%- endif -%}
+            {%- if page-id != "sitemap" and page.inputPath contains "changelog" -%}
+            {%- else -%}
             {% render "components/data-limits" %}
             {% endif %}
         </div>
