Fix mistypes in favicons template

--- a/_includes/layout/favicons.liquid
+++ b/_includes/layout/favicons.liquid
@@ -8,11 +8,11 @@
         <link rel="apple-touch-icon-precomposed" sizes="120x120" href="{{ '/assets/favicons/apple-touch-icon-120x120.png' | url }}" />
         <link rel="apple-touch-icon-precomposed" sizes="76x76" href="{{ '/assets/favicons/apple-touch-icon-76x76.png' | url }}" />
         <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{ '/assets/favicons/apple-touch-icon-152x152.png' | url }}" />
-        <link rel="icon" type="image/png' | url }}" href="{{ '/assets/favicons/favicon-196x196.png' | url }}" sizes="196x196" />
-        <link rel="icon" type="image/png' | url }}" href="{{ '/assets/favicons/favicon-96x96.png' | url }}" sizes="96x96" />
-        <link rel="icon" type="image/png' | url }}" href="{{ '/assets/favicons/favicon-32x32.png' | url }}" sizes="32x32" />
-        <link rel="icon" type="image/png' | url }}" href="{{ '/assets/favicons/favicon-16x16.png' | url }}" sizes="16x16" />
-        <link rel="icon" type="image/png' | url }}" href="{{ '/assets/favicons/favicon-128.png' | url }}" sizes="128x128" />
+        <link rel="icon" type="image/png" href="{{ '/assets/favicons/favicon-196x196.png' | url }}" sizes="196x196" />
+        <link rel="icon" type="image/png" href="{{ '/assets/favicons/favicon-96x96.png' | url }}" sizes="96x96" />
+        <link rel="icon" type="image/png" href="{{ '/assets/favicons/favicon-32x32.png' | url }}" sizes="32x32" />
+        <link rel="icon" type="image/png" href="{{ '/assets/favicons/favicon-16x16.png' | url }}" sizes="16x16" />
+        <link rel="icon" type="image/png" href="{{ '/assets/favicons/favicon-128.png' | url }}" sizes="128x128" />
         <meta name="application-name" content="{{ pkg.sitename }}"/>
         <meta name="msapplication-TileColor" content="#FFFFFF" />
         <meta name="msapplication-TileImage" content="{{ '/assets/favicons/mstile-144x144.png' | url }}" />
