Improving changelog collection and other improvements
Switched from tag based collection to glob on MD files
Added breadcrumbs to all pages
Fix main site URL to always point to the root, replacing the need for that horrible development check
Switch footer version link to the changelog page

--- a/_includes/layout/footer.liquid
+++ b/_includes/layout/footer.liquid
@@ -20,7 +20,7 @@
             </p>
         </div>
         <div class="p-4 pt-2">
-            <a href="{{ pkg.releases.url }}" 
+            <a href="{{ '/changelog' | url }}"" 
                 title="Release version: v{{ pkg.version }}{% if data.environment == 'development' %}-dev{% endif %}" 
                 class="d-inline-flex fw-semibold bg-convrtr border border-convrtr border-opacity-10 rounded-2 text-white release-version">
                 <small>v{{ pkg.version }}{% if data.environment == 'development' %}-dev{% endif %}</small>
