Updated page title with changelog and tag improvements

--- a/_includes/layout/title.liquid
+++ b/_includes/layout/title.liquid
@@ -1,3 +1,4 @@
-<title>{{ pkg.sitename }} - {{ title }}</title>
+<title>{{ pkg.sitename }} - {% if page-id != "sitemap" and page-id != "changelog" and page.inputPath contains "changelog"
+-%}Changelog: v{% endif %}{{ title }}{% if page.url contains "tag/" -%}{%- assign tag = page.url | split: '/' | last %}: {{ tag }}{%- endif %}</title>
 
         <link rel="canonical" href="{{ pkg.homepage }}">
