Filtered list of tags and tag explanations
Linked up each tag in the changelog list, each link goes to a filtered list of changelog items that contain that tag. Only 1 level of filtering is currently available
Added a hidden page (for now) of tags that lists all the available tags.:
- Tags that are applied to changelog items are linked through to the filtered changelog list for that tag
- The number of times a tag had been used is visible in

Re-worked tags list to match Github
Updated tag colors to sync between the site and Github (manually) and to be a bit more accessible

--- a/_includes/layout/breadcrumbs.liquid
+++ b/_includes/layout/breadcrumbs.liquid
@@ -15,7 +15,7 @@
         <li class="breadcrumb-item active" aria-current="page">
             v{{ page.fileSlug }}
         </li>
-        {% elsif page.url contains "/tag" %}
+        {% elsif page.url contains "/tag/" %}
         <li class="breadcrumb-item">
             <a href="{{ '/changelog' | url }}" class="text-convrtr">changelog</a>
         </li>
