--- a/scss/style.scss
+++ b/scss/style.scss
@@ -848,18 +848,6 @@ textarea.form-control.is-invalid.ld-warning {
     padding: 0.35rem 0.85rem;
 }
 .badge {
-    &-release {
-        color: var(--bs-white);
-        background-color: var(--convrtr-bg-color);
-    }
-    &-bug-fixes {
-        color: var(--bs-danger-text-emphasis);
-        background-color: var(--bs-danger-bg-subtle);
-    }
-    &-new-features {
-        color: var(--bs-success-text-emphasis);
-        background-color: var(--bs-success-bg-subtle);
-    }
     &-improvements {
         color: var(--bs-primary-text-emphasis);
         background-color: var(--bs-primary-bg-subtle);
@@ -868,22 +856,62 @@ textarea.form-control.is-invalid.ld-warning {
         color: var(--bs-info-text-emphasis);
         background-color: var(--bs-info-bg-subtle);
     }
+    &-bug-fixes {
+        color: var(--bs-danger-text-emphasis);
+        background-color: var(--bs-danger-bg-subtle);
+    }
+    &-bug {
+        color: var(--bs-white);
+        background-color: var(--bs-danger);
+    }
+    &-documentation {
+        color: var(--bs-white);
+        background-color: var(--bs-primary);
+    }
+    &-duplicate {
+        color: var(--bs-black);
+        background-color: $gray-400;
+    }
+    &-feature-request {
+        color: var(--bs-black);
+        background-color: $indigo-200;
+    }
+    &-hotfix {
+        color: var(--bs-black);
+        background-color: var(--bs-warning);
+    }
     &-major {
         color: var(--bs-white);
         background-color: var(--convrtr-bg-color);
     }
     &-minor {
         color: var(--convrtr-txt-color);
-           background-color: $gray-200;
+        background-color: $gray-200;
         border: 1px solid var(--convrtr-bg-color-25);
+    }
+    &-new-features {
+        color: var(--bs-success-text-emphasis);
+        background-color: var(--bs-success-bg-subtle);
     }
     &-patch {
         color: var(--convrtr-link-color);
         background-color: var(--bs-white);
         border: 1px solid var(--convrtr-bg-color-25);
     }
+    &-question {
+        color: var(--bs-white);
+        background-color: var(--bs-black);
+    }
+    &-release {
+        color: var(--bs-white);
+        background-color: var(--convrtr-bg-color);
+    }
     &-security {
         color: var(--bs-white);
-        background-color: $indigo-500;
+        background-color: $purple;
+    }
+    &-wontfix {
+        color: var(--bs-white);
+        background-color: $pink-600;
     }
 }
